# media-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.requirements  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  ruff.toml
database/: env.py
database/versions/: 4edc0dc62195_.py
media_api/core/: database.py  models.py  schemas.py
media_api/routers/: media_files.py  media_streams.py
media_api/utils/: ffprobe_parser.py
tests/: conftest.py
tests/core/: test_database.py  test_models.py  test_schemas.py
tests/utils/: test_ffprobe_parser.py
