[project]
name = "media-api"
version = "0.1.0"
description = "API service for managing media content, primarily focused on video assets. Provides endpoints for uploading, retrieving, and enriching media metadata."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.32.1,<0.33.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "poethepoet (>=0.37.0,<0.38.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=0.25.0,<0.26.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic (>=2.10.5,<3.0.0)"
]

[tool.poe.tasks]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate"
test = "pytest"
lint = "ruff check ."
format = "ruff format ."
export-requirements = "poetry export -f requirements.txt --output requirements.txt --without-hashes"

[project.optional-dependencies]
dev = [
    "ruff (>=0.8.9,<0.9.0)",
    "pre-commit (>=4.0.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
